--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -37,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.17.9
   firebase_core: ^2.27.1
+  file_picker: ^8.0.0+1
 
 dev_dependencies:
   flutter_test:
